--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -197,14 +197,65 @@ a {
             }
         }
     }
+
+    .nav-overlay {
+        overflow: hidden;
+        height: 0;
+        background-color: #fff;
+        transition: all linear .3s;
+        box-shadow: 0px 20px 20px 0px rgba(0, 0, 0, 0.25);
+        top: -1px;
+        position: relative;
+
+        &.opened {
+            padding: 50px 100px;
+            height: auto;
+            overflow: auto;
+        }
+
+        .top-menu {
+            display: flex;
+            flex-flow: column wrap;
+            list-style: none;
+            align-items: center;
+            margin: 0;
+            padding: 0;
+
+            li {
+                &:not(:last-of-type) {
+                    //margin-right: 30px;
+                    margin-bottom: 20px;
+                }
+
+                .nav-link {
+                    font-weight: bold;
+                    font-size: 20px;
+                    letter-spacing: 0.09em;
+                    text-transform: uppercase;
+                    color: #4F4F56;
+                    border-bottom: 4px solid #fff;
+                    padding: 0;
+
+                    &:hover,
+                    &.active {
+                        border-bottom-color: #4f4f4f;
+                    }
+                }
+            }
+        }
+    }
 }
 
 .header {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     background: no-repeat center center;
     background-size: cover;
     position: relative;
+    display: grid;
+    grid-template-rows: 0.5fr 1fr .5fr;
+    align-items: center;
+
 
     .overlay {
         position: absolute;
@@ -214,45 +265,44 @@ a {
         left: 0;
         background-color: rgba(255, 255, 255, .5);
         z-index: 0;
+    }
 
 
-        .container {
-            height: 100%;
-            z-index: 1;
-            display: grid;
-            grid-template-rows: repeat(3, 1fr);
+    .container {
+        z-index: 1;
+        align-self: center;
+        grid-row: 2;
 
-            .content {
-                grid-row: 2;
+        .content {
 
-                .page-title {
-                    max-width: 848px;
-                    font-weight: bold;
-                    font-size: 64px;
-                    line-height: 74px;
+            .page-title {
+                max-width: 848px;
+                font-weight: bold;
+                font-size: 64px;
+                line-height: 74px;
 
-                    color: #4F4F56;
-                    margin-bottom: 32px;
-                }
+                color: #4F4F56;
+                margin-bottom: 32px;
+            }
 
-                .page-desc {
-                    max-width: 566px;
-                    font-size: 18px;
-                    line-height: 20px;
-                    margin-bottom: 52px;
-                }
+            .page-desc {
+                max-width: 566px;
+                font-size: 18px;
+                line-height: 20px;
+                margin-bottom: 52px;
+            }
 
-                .buttons-group {
-                    display: flex;
+            .buttons-group {
+                display: flex;
 
-                    .button {
-                        &:not(:last-of-type) {
-                            margin-right: 45px;
-                        }
+                .button {
+                    &:not(:last-of-type) {
+                        margin-right: 45px;
                     }
                 }
             }
         }
+
     }
 }
 
@@ -331,7 +381,7 @@ a {
     .accordeon-content {
         height: 0;
         overflow: hidden;
-        transition: all linear .3;
+        transition: all linear .3s;
         position: relative;
 
         .label {
@@ -1464,3 +1514,5 @@ footer.footer {
         }
     }
 }
+
+@import "adaptive.less";
