--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1615,4 +1615,86 @@ footer.footer .copy p {
     display: none;
   }
 }
+@media (max-width: 290px) {
+  .section .accordeon {
+    padding: 12px 34px;
+  }
+  .section .accordeon .accordeon-header h3 {
+    font-size: 16px !important;
+  }
+  .section .accordeon .accordeon-content {
+    grid-template-columns: 1fr;
+    row-gap: 30px;
+  }
+  .section .container .content .section-header .section-title {
+    font-size: 20px !important;
+    line-height: normal;
+    letter-spacing: normal;
+  }
+  .section.variants .container .content .variants-items .variant.leader {
+    transform: scale(1);
+  }
+  .section.variants .container .content .learning-a2 p {
+    font-size: 18px;
+  }
+  .section.plan .container .content .plan-accordeons .accordeon .accordeon-header h3 {
+    font-size: 15px;
+    letter-spacing: normal;
+  }
+  .section.plan .container .content .plan-accordeons .accordeon .accordeon-content {
+    grid-template-columns: 1fr;
+    row-gap: 30px;
+  }
+  .section.plan .container .content .plan-accordeons .accordeon .accordeon-content .col .col-title {
+    font-size: 16px;
+  }
+  .section.plan .container .content .plan-accordeons .accordeon .accordeon-content .col ul li {
+    font-size: 15px;
+  }
+  .section.plan .container .content .select-plan {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, 1fr);
+    row-gap: 30px;
+  }
+  .section.plan .container .content .select-plan-button {
+    width: 100%;
+    font-size: 17px;
+    padding: 13px 20px;
+  }
+  .section.teachers .container .content .teachers-items .teacher .avatar {
+    width: 200px;
+    height: 200px;
+  }
+  .section.teachers .container .content .teachers-items .teacher .item-content .title {
+    font-size: 16px;
+  }
+  .section.teachers .container .content .teachers-items .teacher .item-content .teacher-skills li {
+    font-size: 13px;
+  }
+  .section.advantages .container .content .advantage-items .advantage-item {
+    grid-template-columns: 1fr;
+    row-gap: 20px;
+    justify-items: center;
+  }
+  .section.advantages .container .content .advantage-items .advantage-item .item-content .title {
+    font-size: 19px !important;
+  }
+  .section.success .container .content .section-header .section-title {
+    font-size: 19px !important;
+  }
+  .section.success .container .content .success-items .success-item {
+    padding-right: 18px;
+    padding-left: 18px;
+  }
+  .section.success .container .content .success-items .success-item .item-content .title {
+    font-size: 19px;
+  }
+  .section.success .container .content .success-items .success-item .item-content .text-content {
+    font-size: 15px;
+  }
+  .section.youcan .container .content .youcan-items .youcan-item {
+    grid-template-columns: 1fr;
+    justify-items: center;
+  }
+}
 /*# sourceMappingURL=./style.css.map */
